<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_login_register"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:layout_margin="4dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_user_account"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Circular" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/img_profile2"
        android:layout_toRightOf="@+id/img_profile2">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/txt_profile_welcome"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_welcome"
            android:layout_marginBottom="6dp"
            android:text="@string/txt_profile_not_registered" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_welcome"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@+id/txt_not_registered"
            android:background="?attr/selectableItemBackground"
            android:foreground="?selectableItemBackground"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:text="@string/txt_profile_register_now"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="3dp"
        android:text="@string/txt_profile_login"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

</RelativeLayout>